# langserve-demo

./: README.md  pyproject.toml
app/: server.py
